Online/Examples/c/Example/Example/asigntse-cbindgen.h



/*
Represents the Life Cycle State of the TSE.
The value Unknown indicates an unknown Life Cycle State.
The value NotInitialized indicates that no initialize function, that is either
 @ref initializeDescriptionNotSet or @ref initializeDescriptionSet, has been called yet.
The value Active indicates that the TSE is ready for transactions.
The value Suspended indicates that @ref at_suspendSecureElement has been called.
The value Disabled indicates that @ref disableSecureElement has been called.

    Unknown        = 0
    NotInitialized = 1
    Active         = 2
    Suspended      = 3
    Disabled       = 4
 */
typedef int32_t LifecycleState;


/*
 Gets the lifecycle state of the TSE.

         @param[out] state
             Life cycle state of TSE. [REQUIRED]

         If the execution of the function has failed, the appropriate error code is returned:
 @return @ref ERROR_SE_COMMUNICATION_FAILED    Secure Element communication failed
             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
             ERROR_TIME_NOT_SET
                the managed data/time in the Secure Element has not been updated after the initialization of the SE API
                or a period of absence of current for the Secure Element
 */
int32_t at_getLifecycleState(LifecycleState *state);


/*
see @ref at_getLifecycleState
 */
int32_t at_getLifecycleStateWithTse(LifecycleState *state,
                                    const int8_t *tseId,
                                    uint32_t tseIdLength);


/*
Unsuspends the secure element after a suspend operation. If this operation is successful the Life Cycle State will be set to Active.

             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
 */
int32_t at_unsuspendSecureElement(void);


/*
see @ref at_unsuspendSecureElement
 */
int32_t at_unsuspendSecureElementWithTse(const int8_t *tseId, uint32_t tseIdLength);


/*
Temporarily suspends the secure element. If this operation is successful the lifecycle state will be set to Suspended.
             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
 */
int32_t at_suspendSecureElement(void);


/*
see @ref at_suspendSecureElement
 */
int32_t at_suspendSecureElementWithTse(const int8_t *tseId, uint32_t tseIdLength);


/*
 Export the certificate signing transaction logs.
 @param[out] cert
                array that contains the requested certificate. [REQUIRED]
                If successfully executed, the buffer has to freed by the function caller using the function @ref at_free.
 @param[out] certLength
                length of the array that represents the cert. [REQUIRED]

             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
 */
int32_t at_getCertificate(uint8_t **cert,
                          uint32_t *certLength);


/*
see @ref at_getCertificate
 */
int32_t at_getCertificateWithTse(uint8_t **cert,
                                 uint32_t *certLength,
                                 const int8_t *tseId,
                                 uint32_t tseIdLength);


/*
 Export public key ot the certificate signing transaction logs.
 @param[out] publicKey
                Array that contains the requested public key. [REQUIRED]
                If successfully executed, the buffer has to freed by the function caller using the function @ref at_free.
 @param[out] publicKeyLength
                length of the array that represents the exportedPublicKey [REQUIRED]

             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
 */
int32_t at_getPublicKey(uint8_t **pubKey,
                        uint32_t *pubKeyLength);


/*
see @ref at_getPublicKey
 */
int32_t at_getPublicKeyWithTse(uint8_t **pubKey,
                               uint32_t *pubKeyLength,
                               const int8_t *tseId,
                               uint32_t tseIdLength);


/*
 Get a list of dangling (open) SE transactions.
 @param[out] transactionNumbers
                Array that represents the list of transactions. [REQUIRED]
                If successfully executed, the buffer has to freed by the function caller using the function @ref at_free.
 @param[out] transactionNumbersLength
                Length of the array that represents the list of transactions.

 @return @ref EXECUTION_OK                                execution of the function has been successful
 @return @ref ERROR_AT_LOAD_NOT_CALLED                    @ref at_load has not been called
 @return @ref ERROR_SE_API_NOT_INITIALIZED                the SE API has not been initialized
 @return @ref ERROR_TIME_NOT_SET                          the managed data/time in the Secure Element has not been updated after the initialization of the SE API
                                                          or a period of absence of current for the Secure Element
 @return @ref ERROR_SECURE_ELEMENT_DISABLED               the Secure Element has been disabled

 */
int32_t at_getOpenTransactions(uint32_t **transactionNumbers,
                               uint32_t *transactionNumbersLength);


/*
see @ref at_getOpenTransactions
 */
int32_t at_getOpenTransactionsWithTse(uint32_t **transactionNumbers,
                                      uint32_t *transactionNumbersLength,
                                      const int8_t *tseId,
                                      uint32_t tseIdLength);


/*
 Supplies the current transaction counter (last used value).
 @param[out] transactionCounter
                The current transaction counter. [REQUIRED]

 @return @ref EXECUTION_OK                                  execution of the function has been successful
 @return @ref ERROR_AT_LOAD_NOT_CALLED                    @ref at_load has not been called
 @return @ref ERROR_SE_API_NOT_INITIALIZED                     the SE API has not been initialized
 @return @ref ERROR_SECURE_ELEMENT_DISABLED                   the Secure Element has been disabled
 */
int32_t at_getTransactionCounter(uint32_t *counter);


/*
see @ref at_getTransactionCounter
 */
int32_t at_getTransactionCounterWithTse(uint32_t *counter,
                                        const int8_t *tseId,
                                        uint32_t tseIdLength);


/*
 Supplies the current signature counter (last used value) for the certificate signing transaction logs.
 @param[out] signatureCounter
                The current signature counter. [REQUIRED]

 @return @ref EXECUTION_OK                                  execution of the function has been successful
 @return @ref ERROR_AT_LOAD_NOT_CALLED                       @ref at_load has not been called
 @return @ref ERROR_SE_API_NOT_INITIALIZED                     the SE API has not been initialized
 @return @ref ERROR_SECURE_ELEMENT_DISABLED                   the Secure Element has been disabled
 */
int32_t at_getSignatureCounter(uint32_t *counter);


/*
see @ref at_getSignatureCounter
 */
int32_t at_getSignatureCounterWithTse(uint32_t *counter, const int8_t *tseId, uint32_t tseIdLength);


/*
 Supplies the friendly name of the ASN.1 encoded signature algorithm OID encoded into signed data.
 @param[out] signatureAlgorithm
                Buffer for signature algorithm OID. [REQUIRED]
                If successfully executed, the buffer has to freed by the function caller using the function @ref at_free.
 @param[out] signatureAlgorithmLength
                Length of the signature algorithm OID buffer. [REQUIRED]

 @return @ref EXECUTION_OK                                  execution of the function has been successful
 @return @ref ERROR_AT_LOAD_NOT_CALLED                       @ref at_load has not been called
 @return @ref ERROR_SE_API_NOT_INITIALIZED                     the SE API has not been initialized
 @return @ref ERROR_SECURE_ELEMENT_DISABLED                   the Secure Element has been disabled
 */
int32_t at_getSignatureAlgorithm(int8_t **signatureAlgorithm,
                                 uint32_t *signatureAlgorithmLength);


/*
see @ref at_getSignatureAlgorithm
 */
int32_t at_getSignatureAlgorithmWithTse(int8_t **signatureAlgorithm,
                                        uint32_t *signatureAlgorithmLength,
                                        const int8_t *tseId,
                                        uint32_t tseIdLength);


/*
 Shows the the log time format of the underlying TSE library.
 @param[out] logTimeFormat
                Buffer for log time format information string. [REQUIRED]
                If successfully executed, the buffer has to freed by the function caller using the function @ref at_free.
 @param[out] logTimeFormatLength
                length of the log time format string buffer [REQUIRED]

             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
 */
int32_t at_getLogTimeFormat(int8_t **logTimeFormat,
                            uint32_t *logTimeFormatLength);


/*
see @ref at_getLogTimeFormat
 */
int32_t at_getLogTimeFormatWithTse(int8_t **logTimeFormat,
                                   uint32_t *logTimeFormatLength,
                                   const int8_t *tseId,
                                   uint32_t tseIdLength);


/*
 Shows version number of the underlying TSE library.
 @param[out] version
                Buffer for version information string. [REQUIRED]
                If successfully executed, the buffer has to freed by the function caller using the function @ref at_free.
 @param[out] versionLength
                length of the version string buffer [REQUIRED]

             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
 */
int32_t at_getVersion(int8_t **version,
                      uint32_t *versionLength);


/*
 Gets the serial number (SHA256 hash of public key) of the transaction log signing key.
 @param[out] serial
                Buffer for serial number bytes. [REQUIRED]
                If successfully executed, the buffer has to freed by the function caller using the function @ref at_free.
 @param[out] serialLength
                Length of the serial number buffer. [REQUIRED]

             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
 */
int32_t at_getSerialNumber(uint8_t **serial,
                           uint32_t *serialLength);


/*
see @ref at_getSerialNumber
 */
int32_t at_getSerialNumberWithTse(uint8_t **serial,
                                  uint32_t *serialLength,
                                  const int8_t *tseId,
                                  uint32_t tseIdLength);


/*
 Loads the underlying TSE library.

             ERROR_TPM_CONNECTION
                TPM connection failed
 */
int32_t at_load(void);


/*
 Unloads the underlying TSE library.

             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
 */
int32_t at_unload(void);


/*
 Frees memory allocated by the TSE library.
 @param[in] ptr
                the pointer to free [REQUIRED]
 */
void at_free(void **ptr);


/*
 Registers a client ID.
 @param[in] clientId
                represents the ID of the application to be registered.
                It has to be of maximum length 25 and must not contain
                the following characters: / , < , > , : , " , \ , | , ? , *  [REQUIRED]
 @param[in] clientIdLength
                length of the clientId  [REQUIRED]

         If the execution of the function has failed, the appropriate error code is returned:

             ERROR_AT_LOAD_NOT_CALLED
                @ref at_load has not been called
             ERROR_STORAGE_FAILURE
                some storage related error occured
             ERROR_SE_API_NOT_INITIALIZED
                the SE API has not been initialized
             ERROR_TIME_NOT_SET
                the managed data/time in the Secure Element has not been updated after the initialization of the SE API
                or a period of absence of current for the Secure Element
             ERROR_SECURE_ELEMENT_DISABLED
                the Secure Element has been disabled
             ERROR_INVALID_CLIENT_ID
                clientId contains invalid characters or has invalid length
             ERROR_CLIENT_ID_REGISTRATION_FAILED
                clientId registration has failed
             ERROR_CORRUPTED_REGISTERED_CLIENT_IDS
                clientId registration failed due to corrupted registered clientIds data
             ERROR_CORRUPTED_APP_DATA
                clientId registration failed due to corrupted app data
 */
int32_t at_registerClientId(const int8_t *clientId,
                            uint32_t clientIdLength);


/*
Set path to config file.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] path
                the path to the config file  [REQUIRED]
 @param[in] pathLength
                the length of the path  [REQUIRED]
             ERROR_INVALID_CONFIG
                the config file path does not exist
 */
int32_t cfgSetConfigFile(const int8_t *path, uint32_t pathLength);


/*
Add Tse config section.
 @param[in] tseID
                the ID of the Tse to add, that is the name of the config section  [REQUIRED]
 @param[in] tseIDLength
                the length of the ID of the Tse to add  [REQUIRED]
 @param[in] tseType
                the type of the Tse to add  [REQUIRED]
 @param[in] connParam
                the connection string  [REQUIRED]
 @param[in] connParamLength
                the length of the connection string  [REQUIRED]
 @param[in] atrustTseID
                the A-Trust ID of the Tse
 @param[in] atrustTseIDLength
                the length of the A-Trust ID of the Tse
 @param[in] atrustApiKey
                the A-Trust API key
 @param[in] atrustApiKeyLength
                the length of the A-Trust API key
 @param[in] timeAdminID
                the ID of the time admin
 @param[in] timeAdminIDLength
                the length of the ID of the time admin
 @param[in] timeAdminPwd
                the password of the time admin
 @param[in] timeAdminPwdLength
                the length of the password of the time admin
             ERROR_INVALID_CONFIG
                the config is invalid
 */
int32_t cfgTseAdd(const int8_t *tseID,
                  uint32_t tseIDLength,
                  uint32_t tseType,
                  const int8_t *connParam,
                  uint32_t connParamLength,
                  const int8_t *atrustTseID,
                  uint32_t atrustTseIDLength,
                  const int8_t *atrustApiKey,
                  uint32_t atrustApiKeyLength,
                  const int8_t *timeAdminID,
                  uint32_t timeAdminIDLength,
                  const int8_t *timeAdminPwd,
                  uint32_t timeAdminPwdLength);


/*
Remove Tse config section.
 @param[in] tseID
                the ID of the Tse to remove, that is the name of the config section [REQUIRED]
 @param[in] tseIDLength
                the length of the ID of the Tse to remove [REQUIRED]
             ERROR_CONFIG_VALUE_NOT_FOUND
                the config section could not be found
 */
int32_t cfgTseRemove(const int8_t *tseID, uint32_t tseIDLength);


/*
Enable logging.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable logging [REQUIRED]
 */
int32_t cfgSetLoggingEnabled(bool enabled);


/*
Enable logging to stderr.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable logging to stderr [REQUIRED]
 */
int32_t cfgSetLoggingStderr(bool enabled);


/*
Enable logging to a logfile.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable logging to file [REQUIRED]
 */
int32_t cfgSetLoggingFile(bool enabled);


/*
Set logfile target directory.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] path
                the path to the log directory [REQUIRED]
 @param[in] pathLength
                the length of the path to the log directory [REQUIRED]
 */
int32_t cfgSetLogDir(const int8_t *path, uint32_t pathLength);


/*
Set verbosity level of the logger.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] logLevel
                the log level [REQUIRED]
 @param[in] pathLength
                the length of the log level [REQUIRED]
 */
int32_t cfgSetLogLevel(const int8_t *logLevel, uint32_t logLevelLength);


/*
Makes the logger append to the specified output file, if it exists already; by default, the file would be truncated.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable appending [REQUIRED]
 */
int32_t cfgSetLogAppend(bool enabled);


/*
Enable a colored version of the logline-formatter.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable a colored version of the logline-formatter [REQUIRED]
 */
int32_t cfgSetLogColors(bool enabled);


/*
Enable more detailed log lines.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable more detailed log lines [REQUIRED]
 */
int32_t cfgSetLogDetails(bool enabled);


/*
Enable a colored version of the logline-formatter for stderr logging.
Note that this function has to be called before the library loads,
in order to have an effect.
 @param[in] enabled
                the switch to enable or disable a colored version of the logline-formatter for stderr logging [REQUIRED]
 */
int32_t cfgSetLogStderrColors(bool enabled);


/*
Set the http proxy.
 @param[in] proxyUrl
                the proxy url [REQUIRED]
 @param[in] proxyUrlLength
                the length of the proxy url [REQUIRED]
 */
int32_t cfgSetHttpProxy(const int8_t *proxyUrl, uint32_t proxyUrlLength);