Online/Examples/java/asigntse/src/main/java/at/atrust/asigntse/seapi/NativeLibraryWrapper.java


    int initializePinValues       (ByteBuffer adminPin, NativeInt32 adminPinLength, ByteBuffer adminPuk, NativeInt32 adminPukLength, ByteBuffer timeAdminPin, NativeInt32 timeAdminPinLength, ByteBuffer timeAdminPuk, NativeInt32 timeAdminPukLength);
    int initializePinValuesWithTse(ByteBuffer adminPin, NativeInt32 adminPinLength, ByteBuffer adminPuk, NativeInt32 adminPukLength, ByteBuffer timeAdminPin, NativeInt32 timeAdminPinLength, ByteBuffer timeAdminPuk, NativeInt32 timeAdminPukLength, ByteBuffer tseId, NativeInt32 tseIdLength);
    
    int getPinStatus       (NativeInt32ByReference pinState);
    int getPinStatusWithTse(NativeInt32ByReference pinState, ByteBuffer tseId, NativeInt32 tseIdLength);
    
    int initialize       ();
    int initializeWithTse(ByteBuffer tseId, NativeInt32 tseIdLength);
    
    int activateTse       ();
    int activateTseWithTse(ByteBuffer tseId, NativeInt32 tseIdLength);
    
    int deactivateTse       ();
    int deactivateTseWithTse(ByteBuffer tseId, NativeInt32 tseIdLength);
    
    int getTotalLogMemory       (NativeInt64ByReference sizeOfMemory);
    int getTotalLogMemoryWithTse(NativeInt64ByReference sizeOfMemory, ByteBuffer tseId, NativeInt32 tseIdLength);
  
    // XXX without TSE is missing in RUST 
    int getAvailableLogMemory       (NativeInt64ByReference sizeOfMemory);
    int getAvailableLogMemoryWithTse(NativeInt64ByReference sizeOfMemory, ByteBuffer tseId, NativeInt32 tseIdLength);

    // ///////////////////////////////////
	//      A-Trust functions
    // ///////////////////////////////////
    int at_getVersion       (PointerByReference version, NativeInt32ByReference versionLength);

	void at_free(PointerByReference ptr);

	int at_getCertificate(PointerByReference cert, NativeInt32ByReference certLength);
	int at_getCertificateWithTse(PointerByReference cert, NativeInt32ByReference certLength, ByteBuffer tseId, NativeInt32 tseIdLength);

	int at_getLifecycleState(NativeInt32ByReference state);
	int at_getLifecycleStateWithTse(NativeInt32ByReference state, ByteBuffer tseId, NativeInt32 tseIdLength);

	int at_getLogTimeFormat(PointerByReference logTimeFormat, NativeInt32ByReference logTimeFormatLength);
	int at_getLogTimeFormatWithTse(PointerByReference logTimeFormat, NativeInt32ByReference logTimeFormatLength, ByteBuffer tseId, NativeInt32 tseIdLength);

	int at_getOpenTransactions(PointerByReference transactionNumbers, NativeInt32ByReference transactionNumbersLength);
	int at_getOpenTransactionsWithTse(PointerByReference transactionNumbers, NativeInt32ByReference transactionNumbersLength, ByteBuffer tseId, NativeInt32 tseIdLength);

	int at_getPublicKey(PointerByReference pubKey, NativeInt32ByReference pubKeyLength);
	int at_getPublicKeyWithTse(PointerByReference pubKey, NativeInt32ByReference pubKeyLength, ByteBuffer tseId, NativeInt32 tseIdLength);

	int at_getSerialNumber(PointerByReference serial, NativeInt32ByReference serialLength);
	int at_getSerialNumberWithTse(PointerByReference serial, NativeInt32ByReference serialLength, ByteBuffer tseId, NativeInt32 tseIdLength);

	int at_getSignatureAlgorithm(PointerByReference signatureAlgorithm, NativeInt32ByReference signatureAlgorithmLength);
	int at_getSignatureAlgorithmWithTse(PointerByReference signatureAlgorithm, NativeInt32ByReference signatureAlgorithmLength, ByteBuffer tseId, NativeInt32 tseIdLength);

	int at_getSignatureCounter(NativeInt32ByReference counter);
	int at_getSignatureCounterWithTse(NativeInt32ByReference counter, ByteBuffer tseId, NativeInt32 tseIdLength);

	int at_getTransactionCounter(NativeInt32ByReference counter);
	int at_getTransactionCounterWithTse(NativeInt32ByReference counter, ByteBuffer tseId, NativeInt32 tseIdLength);

	int at_getVersion(ByteBuffer version, NativeInt32ByReference versionLength);

	int at_load();

	int at_suspendSecureElement();
	int at_suspendSecureElementWithTse(ByteBuffer tseId, NativeInt32 tseIdLength);

	int at_unload();

	int at_unsuspendSecureElement();
	int at_unsuspendSecureElementWithTse(ByteBuffer tseId, NativeInt32 tseIdLength);
	
	int at_registerClientId(ByteBuffer clientId, NativeInt32 clientIdLength);
	
	// ///////////////////////////////////
	//      Configuration functions
    // ///////////////////////////////////
	int cfgSetConfigFile(ByteBuffer path, NativeInt32 pathLength);

	int cfgSetHttpProxy(ByteBuffer proxyUrl, NativeInt32 proxyUrlLength);

	int cfgSetLogAppend(boolean enabled);

	int cfgSetLogColors(boolean enabled);

	int cfgSetLogDetails(boolean enabled);

	int cfgSetLogDir(ByteBuffer path, NativeInt32 pathLength);

	int cfgSetLogLevel(ByteBuffer logLevel, NativeInt32 logLevelLength);

	int cfgSetLogStderrColors(boolean enabled);

	int cfgSetLoggingEnabled(boolean enabled);

	int cfgSetLoggingFile(boolean enabled);

	int cfgSetLoggingStderr(boolean enabled);

	int cfgTseAdd(ByteBuffer tseID,
		    NativeInt32 tseIDLength,
		    NativeInt32 tseType,
		    ByteBuffer connParam,
		    NativeInt32 connParamLength,
		    ByteBuffer atrustTseID,
		    NativeInt32 atrustTseIDLength,
		    ByteBuffer atrustApiKey,
		    NativeInt32 atrustApiKeyLength,
		    ByteBuffer timeAdminID,
		    NativeInt32 timeAdminIDLength,
		    ByteBuffer timeAdminPwd,
		    NativeInt32 timeAdminPwdLength);

	int cfgTseRemove(ByteBuffer tseID, NativeInt32 tseIDLength);
}
